# wv

./: .gitignore  README.md  wv.code-workspace
boards/boids/: mod.ts
boards/others/: netscan.py
boards/others/scrolless/: index.html  scrolless.js  scrolless.old.js  style.css
boards/projet0-S0/: main.py
boards/projet2-gravitide/: gravitide.py  vfield.py  vfield.wgsl
export-jam/: code.ts  manifest.json  package.json
waveboard/: deno.json  index.html  package.json  vite.config.ts
waveboard-wasm/: Cargo.toml
waveboard-wasm/.cargo/: config.toml
waveboard-wasm/examples/: framework.rs  lib.rs  main.rs
waveboard-wasm/examples/boids/: mod.rs
waveboard-wasm/examples/bunnymark/: mod.rs
waveboard-wasm/examples/cube/: mod.rs
waveboard-wasm/examples/ray_cube_compute/: mod.rs
waveboard-wasm/examples/ray_traced_triangle/: mod.rs
waveboard-wasm/examples/srgb_blend/: mod.rs
waveboard-wasm/examples/static/: index_wasm.html
waveboard-wasm/examples/stencil_triangles/: mod.rs
waveboard-wasm/examples/waveboard/: mod.rs
waveboard-wasm/src/: iadq_context.rs  lib.rs  main.rs  offscreen_canvas.rs  renderer.rs  surface_app.rs  surface_wrapper.rs  utils.rs
waveboard-wasm/src/waveboard/: mod.rs
waveboard-wasm/xtask/src/: build_wasm.rs  main.rs  run_deno.rs  vendor_web_sys.rs
waveboard/src/: App.tsx  CodeArea.css  CodeArea.tsx  commands.ts
waveboard/src/Board/: Board.tsx  CanvasLayer.tsx  DOMLayer.tsx  Minimap.tsx
waveboard/src/Components/: App.css  App.tsx  splatting.ts
waveboard/src/Components/Board/: Board.tsx  DOMLayer.tsx
waveboard/src/Components/NodeFrame/: NodeFrame.css
waveboard/src/Components/Tab/: Tab.tsx
waveboard/src/Components/webgl2/: webgl2.d.ts  webgl2.js  webgl2_bg.wasm.d.ts  webgpu.d.ts  webgpu.js  webgpu_bg.wasm  webgpu_bg.wasm.d.ts
wavemod-core/: Cargo.toml  rustfmt.toml
wavemod-core/src/: board.rs  commands.rs  db.rs  graphics.rs  http.rs  http_client.rs  iadq_context.rs  lib.rs  main.rs  notauri.rs  python.rs  renderer.rs  schema.rs  setup.rs  surface_wrapper.rs  utils.rs
wavemod-core/src/example/: README.md  cosmos.wgsl  mod.rs  splatting.wgsl
wavemod-core/waveboard/: index.html  package.json  vite.config.ts
wavemod-core/waveboard/src/: App.tsx  NodeFrame.tsx  main.tsx
wavemod-core/waveboard/src/Board/: Board.css  Board.tsx  CanvasLayer.tsx  DOMLayer.tsx  viewportStore.ts
wavemod-core/waveboard/src/Components/: App.tsx
wavemod-core/waveboard/src/Components/Board/: CanvasLayer.tsx  DOMLayer.tsx  cameraStore.ts
wavemod-core/waveboard/src/Components/CodeArea/: CodeArea.tsx
wavemod-core/waveboard/src/Components/webgl2/: webgl2.js  webgl2_bg.wasm  webgpu.d.ts  webgpu.js  webgpu_bg.wasm  webgpu_bg.wasm.d.ts
wavemod-core/waveboard/src/assets/: styles.css
wavemod-core/waveboard/src/webgl2/: webgl2.d.ts  webgl2.js  webgl2_bg.wasm.d.ts  webgpu.d.ts  webgpu.js  webgpu_bg.wasm  webgpu_bg.wasm.d.ts
wavemod-core/xtask/: Cargo.toml
wavemod-core/xtask/src/: main.rs  run_static.rs  test.rs  wasm.rs
wavemod-tauri/: Cargo.toml  tauri.conf.json
wavemod-tauri/assets/: canvas.wgsl
wavemod-tauri/capabilities/: default.json
wavemod-tauri/icons/: icon.icns
wavemod-tauri/src/: board.rs  graphics.rs  lib.rs  python.rs  setup.rs  update.rs  utils.rs
wavemod-tauri/src-py/wavemod/: __init__.py  node.py  utils.py  window.py
wavemod-wry/: Cargo.toml
wavemod-wry/src/: main.rs
wavemod/src/: commands.rs  global.rs  notauri.rs  schema.rs
wavemod/src-py/wavemod/: tests.py
wavemod_taury/src/: graphics.rs  main.rs
wavemod_taury/src-py/wavemod/: gpu.py
wgpu/: Cargo.toml  README.md  wgpu.code-workspace
wgpu/.cargo/: config.toml
wgpu/examples/src/: framework.rs  main.rs
wgpu/examples/src/bunnymark/: mod.rs
wgpu/examples/src/conservative_raster/: mod.rs
wgpu/examples/src/mipmap/: mod.rs
wgpu/examples/src/msaa_line/: mod.rs
wgpu/examples/src/multiple_render_targets/: mod.rs
wgpu/examples/src/ray_cube_fragment/: mod.rs
wgpu/examples/src/ray_scene/: mod.rs
wgpu/examples/src/ray_shadows/: mod.rs
wgpu/examples/src/shadow/: mod.rs
wgpu/examples/src/skybox/: mod.rs
wgpu/examples/src/texture_arrays/: mod.rs
wgpu/examples/src/water/: mod.rs
wgpu/examples/src/waveboard/: mod.rs
wgpu/xtask/src/: build_wasm.rs  main.rs  run_static.rs
