[package]
name = "wavemod"
version = "0.2.0"
description = "Waveboard Core"
authors = ["nb"]
edition = "2021"

[lib]
name = "wavemod_core"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "waveboard-core"
path = "src/main.rs"
test = false

[lints.clippy]
manual_c_str_literals = "allow"
ref_as_ptr = "warn"

[features]
default = []
webgl = ["wgpu/webgl"]
webgpu = ["wgpu/webgpu"]

[dependencies]
glam = { version = "0.29", features = ["bytemuck"] }
nanorand = { version = "0.7", default-features = false, features = ["wyrand"] }
png = "0.17.16"

cfg-if = "1"
serde_json = "1"
log = "0.4"
pollster = "0.4"
bytemuck = { version = "1.21", features = ["derive", "min_const_generics"] }
serde = { version = "1", features = ["derive"] }

wgpu = { version = "24.0.0", default-features = false, features = [
  "serde",
  "wgsl",
  "dx12",
  "metal",
  "static-dxc",
] }
winit = { version = "0.29", features = ["android-native-activity"] }


[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11"
pyo3 = { version = "0.23", features = ["auto-initialize"] }
pyo3-ffi = "0.23"
tokio = "1"
window-vibrancy = "0"
wry = "0.48"
png = "0.17.16"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
console_log = "1"
fern = "0.7"
wasm-bindgen = "0.2.97"
wasm-bindgen-futures = "0.4.45"
# We need these features in the framework examples and tests
web-sys = { version = "0.3.74", default-features = false, features = [
  "Location",
  "Blob",
  "RequestInit",
  "RequestMode",
  "Request",
  "ImageData",
  "Response",
  "HtmlImageElement",
  "WebGl2RenderingContext",
  "CanvasRenderingContext2d",
] }
web-time = "0.2.4"

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3"
