[package]
name = "wavemod"
version = "0.1.0"
description = "Waveboard back-end"
authors = ["nb"]
edition = "2021"

[lib]
name = "wavemod_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

wgpu = "23" 
wry = "0.47.2"
tao = "0.31.0"
window-vibrancy = "0"


tokio = "1"
pollster = "0.4"
bytemuck = "1"
tracing = { version = "0.1", features = ["log", "release_max_level_info"] }
tracing-subscriber = { version = "0.3", features = [
  'time',
  'env-filter',
  'json',
] }
notify = "7"
notify-debouncer-mini = "0.5.0"

pyo3 = { version = "0.23", features = ["auto-initialize"] }
pyo3-ffi = "0.23"

# tauri-invoke-http = "0.1"
reqwest = { version = "0.12.11", features = ["json", "gzip"] }
tauri-plugin-fs = { version = "2", features = ["watch"] }

